--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,18 +1,34 @@
 [window]
 decorations = "full"
-opacity = 0.95
+opacity = 0.80
+blur=true
 dynamic_title = true
+dynamic_padding=true
+padding={ x = 16, y = 4 }
+startup_mode="maximized"
+title="Terminal"
 
 [font]
 size = 14.0
-normal.family = "JetBrainsMono Nerd Font"
-normal.style = "Regular"
-bold.family = "JetBrainsMono Nerd Font"
-bold.style = "Bold"
-italic.family = "JetBrainsMono Nerd Font"
-italic.style = "Italic"
-bold_italic.family = "JetBrainsMono Nerd Font"
-bold_italic.style = "Bold Italic"
+
+[terminal.shell]
+program = "/bin/zsh"
+
+[font.normal]
+family = "JetBrainsMono Nerd Font"
+style = "Regular"
+
+[font.bold]
+family = "JetBrainsMono Nerd Font"
+style = "Bold"
+
+[font.italic]
+family = "JetBrainsMono Nerd Font"
+style = "Italic"
+
+[font.bold_italic]
+family = "JetBrainsMono Nerd Font"
+style = "Bold Italic"
 
 [font.offset]
 x = 0
@@ -52,7 +68,7 @@ unfocused_hollow = true
 
 [cursor.style]
 shape = "Block"
-blinking = "On"
+blinking = "on"
 
 [mouse]
 hide_when_typing = true
